PLAT-568 Fix table overflow issue.

--- a/assets/stylesheets/bootstrap/_tables.scss
+++ b/assets/stylesheets/bootstrap/_tables.scss
@@ -172,7 +172,7 @@ table {
 // will display normally.
 
 .table-responsive {
-  overflow-x: auto;
+  overflow: inherit;
   min-height: 0.01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
 
   @media screen and (max-width: $screen-xs-max) {
